--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 flask==3.0.3
 flask-cors==4.0.1
-gunicorn==22.0.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+requests-oauthlib==2.0.0
+python-dotenv==1.1.1
+gunicorn==21.2.0
