--- a/.env
+++ b/.env
@@ -1,19 +1,6 @@
-SECRET_KEY=supersecret
-PUBLIC_URL=https://admindtech.onrender.com
-
-# Instagram / Facebook / TikTok / YouTube OAuth
-IG_CLIENT_ID=your_instagram_client_id
-IG_CLIENT_SECRET=your_instagram_client_secret
-FB_CLIENT_ID=your_facebook_client_id
-FB_CLIENT_SECRET=your_facebook_client_secret
-TT_CLIENT_ID=your_tiktok_client_id
-TT_CLIENT_SECRET=your_tiktok_client_secret
-YT_CLIENT_ID=your_youtube_client_id
-YT_CLIENT_SECRET=your_youtube_client_secret
-
-# Contact email (use Gmail SMTP or your provider)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_app_password   # Gmail App Password (not your login)
-CONTACT_TO=sawmoore80@gmail.com
+SECRET_KEY=supersecretkey
+#SMTP_HOST=smtp.gmail.com
+#SMTP_PORT=465
+#SMTP_USER=you@gmail.com
+#SMTP_PASS=app_password
+#CONTACT_TO=sawmoore80@gmail.com
