--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ SECRET_KEY=supersecretkey
 #SMTP_USER=you@gmail.com
 #SMTP_PASS=app_password
 #CONTACT_TO=sawmoore80@gmail.com
+BASE_URL=https://admindtech.onrender.com
+SECRET_KEY=dev-secret
