OAuth start+callback, AI answers, icon buttons, pro UI

--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
 SECRET_KEY=supersecretkey
-#SMTP_HOST=smtp.gmail.com
-#SMTP_PORT=465
-#SMTP_USER=you@gmail.com
-#SMTP_PASS=app_password
-#CONTACT_TO=sawmoore80@gmail.com
 BASE_URL=https://admindtech.onrender.com
-SECRET_KEY=dev-secret
+OPENAI_API_KEY=your_openai_api_key
+
+IG_CLIENT_ID=
+IG_CLIENT_SECRET=
+FB_CLIENT_ID=
+FB_CLIENT_SECRET=
+YT_CLIENT_ID=
+YT_CLIENT_SECRET=
+TT_CLIENT_ID=
+TT_CLIENT_SECRET=
+LI_CLIENT_ID=
+LI_CLIENT_SECRET=
